css/app.css
/* ... */
  .modals-base .modal .photos-out {
    margin-top: 1rem;
    height: 400px;
    overflow-y: hidden; }
    .modals-base .modal .photos-out .photos-inner {
      overflow: scroll;
      height: 100%;
      -webkit-overflow-scrolling: touch; }
      .modals-base .modal .photos-out .photos-inner::-webkit-scrollbar {
        display: none; }
    .modals-base .modal .photos-out img {
      display: block;
      text-align: center;
      margin: 0 auto; }

.modals-base .container-arrow {
  width: 22px;
  height: 22px;
  border: solid 3px #fff;
  border-radius: 50%;
  transition: .2s;
  position: absolute;
  bottom: 5%;
  right: 5%;
  opacity: .8;
  -webkit-animation: up-down-arrow 1s infinite ease-in-out alternate both;
          animation: up-down-arrow 1s infinite ease-in-out alternate both; }
  .modals-base .container-arrow .arrow {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: bold;
    font-size: 1rem;
    color: #fff;
    width: 0;
    height: 0;
    transition: .1s;
    position: absolute;
    right: 6.5%;
    top: 4%;
    transform: rotate(90deg); }

.github {
  transform: translateY(-30px);
  transition: .5s;
  opacity: 0; }
  .github.fade-in {
    transform: translateY(0);
    opacity: 1; }
  .github .container {
    margin: 0 auto;
    max-width: 768px; }
    .github .container p.principal {
      text-align: center; }
  .github #gh-profile {
    text-align: center; }
    .github #gh-profile .gh-login {
      font-size: 1.5rem;
      margin-bottom: 1rem; }
    .github #gh-profile .gh-img {
      height: 300px;
      width: auto; }
    .github #gh-profile #gh-hirable {
      color: red; }
      .github #gh-profile #gh-hirable.hirable {
        color: greenyellow; }

.contact .container {
  padding: 1rem 1rem 6rem 1rem; }

.header-text h2 {
  -webkit-animation: show-up-left 1s ease-in both;
          animation: show-up-left 1s ease-in both; }

.header-text h1 {
  -webkit-animation: show-up-right 1s ease-out both .8s;
          animation: show-up-right 1s ease-out both .8s; }

.header-dev {
  -webkit-animation: show-up-right 1s ease-in-out both 1.5s;
          animation: show-up-right 1s ease-in-out both 1.5s; }
  .header-dev a h3 {
    -webkit-animation: show-up-left 1s ease-in-out both 1.5s;
            animation: show-up-left 1s ease-in-out both 1.5s; }

.header-photo {
  -webkit-animation: show-up-left 1s ease-in-out both 2s;
          animation: show-up-left 1s ease-in-out both 2s; }
  .header-photo a h3 {
    -webkit-animation: show-up-right 1s ease-in-out both 2s;
            animation: show-up-right 1s ease-in-out both 2s; }

.header::after {
  -webkit-animation: popup-square-init 3s cubic-bezier(0.4, 0, 0.2, 1) both;
          animation: popup-square-init 3s cubic-bezier(0.4, 0, 0.2, 1) both; }

@-webkit-keyframes in-over-arrow {
  0% {
    opacity: .2;
    transform: scale(0.5); }
  100% {
    opacity: .8;
    transform: scale(0.7); } }

@keyframes in-over-arrow {
  0% {
    opacity: .2;
    transform: scale(0.5); }
  100% {
    opacity: .8;
    transform: scale(0.7); } }

@-webkit-keyframes up-down-arrow {
  0% {
    transform: translateY(-5px); }
  100% {
    transform: translateY(5px); } }

@keyframes up-down-arrow {
  0% {
    transform: translateY(-5px); }
  100% {
    transform: translateY(5px); } }

@-webkit-keyframes show-up-left {
  0% {
    opacity: 0;
    transform: translateX(-30px); }
  100% {
    opacity: 1;
    transform: translateX(0px); } }

@keyframes show-up-left {
  0% {
    opacity: 0;
    transform: translateX(-30px); }
  100% {
    opacity: 1;
    transform: translateX(0px); } }

@-webkit-keyframes show-up-right {
  0% {
    opacity: 0;
    transform: translateX(30px); }
  100% {
    opacity: 1;
    transform: translateX(0px); } }

@keyframes show-up-right {
  0% {
    opacity: 0;
    transform: translateX(30px); }
  100% {
    opacity: 1;
    transform: translateX(0px); } }

@-webkit-keyframes show-up-scale {
  0% {
    opacity: 0; }
  100% {
    opacity: 1; } }

@keyframes show-up-scale {
  0% {
    opacity: 0; }
  100% {
    opacity: 1; } }

@-webkit-keyframes popup-square-init {
  0% {
    opacity: 0;
    transform: translate(20%, 120%);
    height: 50px;
    width: 50px; }
  30% {
    opacity: 1;
    transform: translate(200%, 50%);
    height: 200px;
    width: 50px; }
  60% {
    opacity: 1;
    transform: translate(32%, 154%);
    height: 200px;
    width: 200px; }
  100% {
    opacity: 1;
    transform: translate(25%, 25%);
    height: 624px;
    width: 150px; } }

@keyframes popup-square-init {
  0% {
    opacity: 0;
    transform: translate(20%, 120%);
    height: 50px;
    width: 50px; }
  30% {
    opacity: 1;
    transform: translate(200%, 50%);
    height: 200px;
    width: 50px; }
  60% {
    opacity: 1;
    transform: translate(32%, 154%);
    height: 200px;
    width: 200px; }
  100% {
    opacity: 1;
    transform: translate(25%, 25%);
    height: 624px;
    width: 150px; } }

@-webkit-keyframes hover-after {
  0% {
    transform: scale(1); }
  100% {
    transform: scale(0.8); } }

@keyframes hover-after {
  0% {
    transform: scale(1); }
  100% {
    transform: scale(0.8); } }

@-webkit-keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0; }
  40% {
    opacity: 0.6; }
  100% {
    opacity: 1; } }

@keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0; }
  40% {
    opacity: 0.6; }
  100% {
    opacity: 1; } }

@-webkit-keyframes tracking-in-contract {
  0% {
    letter-spacing: 1em;
    opacity: 0; }
  40% {
    opacity: 0.6; }
  100% {
    letter-spacing: normal;
    opacity: 1; } }

@keyframes tracking-in-contract {
  0% {
    letter-spacing: 1em;
    opacity: 0; }
  40% {
    opacity: 0.6; }
  100% {
    letter-spacing: normal;
    opacity: 1; } }

@-webkit-keyframes text-focus-in {
  0% {
    filter: blur(12px);
    opacity: 0; }
  100% {
    filter: blur(0px);
    opacity: 1; } }
/* ... */

